<?xml version="1.0"?>
<package format="2">
  <name>csm</name>
  <version>0.1.0</version>
  <description>Catkin wrapper for the scan matcher lib from csm</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
